Improveved home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,7 @@ input, select, textarea {
 	appearance: none;
 }
 
+
 /* Basic */
 
 	@-ms-viewport {
@@ -2367,6 +2368,8 @@ input, select, textarea {
 				.image.main {
 					margin: 0 0 2em 0;
 				}
+				.tiles article > .image img {
+					max-height: 200px;		}
 
 			}
 
@@ -2601,6 +2604,7 @@ input, select, textarea {
 				.tiles article > .image img {
 					display: block;
 					width: 100%;
+					height: 400px;
 				}
 
 				.tiles article > .image:before {
